--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,30 +1,35 @@
-.container {
-  margin-top: 96px;
+.page {
+  padding: 40px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  padding: 0 24px;
+  height: 100vh;
+  width: 100%;
 }
 
-.iconContainer {
+.header {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
+  justify-content: flex-end;
+}
+
+.btn {
+  background-color: rgb(87, 23, 177);
+  color: rgb(255, 255, 255);
+  font-weight: bold;
   padding: 16px;
+  border: none;
+  border-radius: 5px;
 }
 
-.h1 {
-  margin-bottom: 0px;
+
+.btn:active {
+  background-color: white;
 }
 
-.explain {
-  font-size: 1.125rem;
-}
-
-.lightPurple {
-  color: #e011a7;
+.btnDis {
+  background-color: rgb(57, 57, 57);
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  padding: 16px;
+  border: none;
+  border-radius: 5px;
 }
